fixed h1 being pushed offscreen on mobile

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -36,10 +36,9 @@ header {
     font-weight: 800;
     font-size: 5rem;
     letter-spacing: 0.02rem;
-    color: #fff;
+    color: #dedede;
     text-transform: none;
     opacity: 0.85;
-    mix-blend-mode: exclusion;
   }
 
   .circle-image {
@@ -128,6 +127,7 @@ header {
 
     h1 {
       font-size: 2.5rem;
+      text-align: center;
     }
 
     .circle-image {
@@ -265,10 +265,23 @@ header {
 // Some mobile fixes
 @media (max-width: 575px) {
   header {
-    h1 {
-      text-align: center;
+    section {
+      max-width: 100vw;
+    }
+    flex-direction: column;
+    align-items: center;
+    padding-top: 10vh;
+    padding-bottom: 5vh;
+    #title-container {
+      max-width: 100vw;
+      h1 {
+        font-size: 2rem;
+        text-align: center;
+        margin: 0;
+      }
     }
     ul {
+      padding: 0;
       scale: 0.65;
       a.commission-btn {
         padding: 0.8rem;
